# sim

./: .firebaserc  .gitignore  README.md  claude_desktop_config.json  create_reasoning_engine.py  firebase.json  main.py  makefile  pyproject.toml  requirements.txt  setup_rag.py  utils.py
ai_docs/: MODULAR_ORGANIZATION.md  review_by_chat_gpt.txt
config/: __init__.py  database.py  settings.py
frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
sim_guide_agent/: __init__.py  agent.py  callbacks.py  models.py  prompts.py  tools.py
sim_guide_agent/agent/: __init__.py  config.py  core.py  state.py
sim_guide_agent/callbacks/: __init__.py  agent.py  common.py  model.py  tool.py
sim_guide_agent/tools/: __init__.py  common.py  reminders.py  reminders_adk.py  session.py  session_summary_adk.py  user_preferences.py  user_preferences_adk.py
tests/: __init__.py  test_agent.py  test_callbacks.py  test_state.py
utils/: __init__.py  db_utils.py
